# Kanao

./: CHANGELOG.md  CONTRIBUTING.md  README.md  STRUCTURE.md  config.ini  main.py  pyproject.toml  requirements.txt
builddir/: .buildinfo  changelog.html  configuration.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
builddir/.doctrees/: changelog.doctree  environment.pickle  index.doctree  installation.doctree
builddir/.doctrees/modules/: pdf_module.doctree  txt_module.doctree  url_module.doctree  word_module.doctree
builddir/_sources/: changelog.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
builddir/_sources/modules/: url_module.rst.txt
builddir/modules/: pdf_module.html  txt_module.html  url_module.html  word_module.html
data/txt_data/: input.txt
kanao/modules/: get_api_key.py  write_api_key.py
kavy/core/: kavy.py
kavy/modules/: get_api_key.py  pdf_module.py  txt_module.py  url_module.py  word_module.py  write_api_key.py
source/: conf.py  configuration.rst  contributing.rst  installation.rst  usage.rst
source/modules/: pdf_module.rst  txt_module.rst  word_module.rst
