[tool.poetry]
name = "kanao"
version = "1.0.0"
description = "Kanao is a project designed to train a GPT (Generative Pre-trained Transformer) model on custom datasets. It provides the capability to train the model using various data sources, including PDFs, Word documents, plain text files, and URLs."
authors = ["Anupam Maurya <anupammaurya981@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers=["Development Status :: 3 - Alpha","Intended Audience :: Developers","Topic :: Software Development :: Build Tools","Programming Language :: Python :: 3.11"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
backoff = "2.2.1"
bcrypt = "4.0.1"
beautifulsoup4 = "4.12.2"
bs4 = "0.0.1"
cachetools = "5.3.2"
certifi = "2023.7.22"
charset-normalizer = "3.3.2"
chroma-hnswlib = "0.7.3"
chromadb = "0.4.17"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
dataclasses-json = "0.6.2"
Deprecated = "1.2.14"
distro = "1.8.0"
dnspython = "2.4.2"
fastapi = "0.104.1"
filelock = "3.13.1"
flatbuffers = "23.5.26"
frozenlist = "1.4.0"
fsspec = "2023.10.0"
google-auth = "2.23.4"
googleapis-common-protos = "1.61.0"
greenlet = "3.0.1"
grpcio = "1.59.2"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
httpx = "0.25.1"
huggingface-hub = "0.17.3"
humanfriendly = "10.0"
idna = "3.4"
importlib-metadata = "6.8.0"
importlib-resources = "6.1.1"
jsonpatch = "1.33"
jsonpointer = "2.4"
kubernetes = "28.1.0"
langchain = "0.0.334"
langsmith = "0.0.63"
lxml = "4.9.3"
marshmallow = "3.20.1"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
numpy = "1.26.1"
oauthlib = "3.2.2"
onnxruntime = "1.16.2"
openai = "1.2.3"
opentelemetry-api = "1.21.0"
opentelemetry-exporter-otlp-proto-common = "1.21.0"
opentelemetry-exporter-otlp-proto-grpc = "1.21.0"
opentelemetry-proto = "1.21.0"
opentelemetry-sdk = "1.21.0"
opentelemetry-semantic-conventions = "0.42b0"
overrides = "7.4.0"
packaging = "23.2"
posthog = "3.0.2"
protobuf = "4.25.0"
pulsar-client = "3.3.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pydantic = "2.4.2"
pydantic_core = "2.10.1"
PyPika = "0.48.9"
pyreadline3 = "3.4.1"
python-dateutil = "2.8.2"
python-docx = "1.1.0"
python-dotenv = "1.0.0"
PyYAML = "6.0.1"
regex = "2023.10.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.5"
SQLAlchemy = "2.0.23"
starlette = "0.27.0"
sympy = "1.12"
tenacity = "8.2.3"
tiktoken = "0.5.1"
tokenizers = "0.14.1"
tqdm = "4.66.1"
typer = "0.9.0"
typing-inspect = "0.9.0"
typing_extensions = "4.8.0"
urllib3 = "1.26.18"
uvicorn = "0.24.0.post1"
watchfiles = "0.21.0"
websocket-client = "1.6.4"
websockets = "12.0"
wrapt = "1.16.0"
yarl = "1.9.2"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


